@@ -1,7 +1,11 @@
 CHANGELOG
 =========
 
-MyKnowledgeBase version version 2.8 - january 2016
+MyKnowledgeBase version 2.9 - january 2016
+- file header: removed is_home so homepage content is not displayed when using a static blog page
+- several small adjustments
+
+MyKnowledgeBase version 2.8 - january 2016
 - updated file style
 - updated file custom-editor-style
 - updated file functions
